[tool.poetry]
name = "learning-llmcompiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# Tell Poetry to not try to package and install this project
package-mode = false

[tool.poetry.dependencies]
python = "3.10.12"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
langgraph = "^0.0.24"
langsmith = "^0.1.33"
numexpr = "^2.9.0"
langchainhub = "^0.1.15"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"